test/Runner/errors/tests/Seed/Seeding2.runtime.js
seed("Seed", async () => {
	await new Promise(() => {
		throw new Error();
	})
});